# phi

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  sysutils.py
documentation/: phi.1  sqlite_layout.md
include/: parser.hpp
include/cxxopts/: cxxopts.hpp
include/database/: Database.hpp  structs.hpp
include/encryption/: gzip.hpp  hashing.hpp  key_derivation.hpp
include/encryption/asymmetric/: ed25519.hpp  kyber.hpp  kyber.tpp  ntru.h  rsa.hpp
include/encryption/symmetric/: aes.hpp  ccp.hpp  twofish.hpp
include/oqs/: oqsconfig.h
include/ui/: Manager.hpp  color_defs.hpp  constants.hpp  utils.hpp
include/utils/: file_utils.hpp  input_validation_utils.hpp  str_utils.hpp
lib/lib/: liboqs.9.dylib
src/: Database.cpp  Manager.cpp  Manager_components.cpp  Manager_render_functions.cpp  Manager_screensaver.cpp  aes.cpp  ccp.cpp  ed25519.cpp  gzip.cpp  hashing.cpp  key_derivation.cpp  kyber.cpp  main.cpp  ntru.c  parser.cpp  parser_contact.cpp  parser_decrypt.cpp  parser_encrypt.cpp  rsa.cpp  twofish.cpp
tests/: msg.txt
tests/aes128/: key
tests/aes192/: key
tests/aes256/: key
tests/chacha20_poly1305/: key
tests/rsa_2048/: priv  pub
tests/rsa_4096/: priv  pub
